*Wed Feb 2 2011 Henri Gavin <.> 0.20100105
-   re-commit after source-forge hack of Jan 28 2011.

*Thu Dec 23 2010 Henri Gavin <.> 0.20100105
- add caveat on maximum shear stress in user manual

*Wed Dec 1 2010 Henri Gavin <.> 0.20100105
- fixed bug related to linear analysis of temperature loads
- added ascii (ANSI.SYS) color to screen output hpgUtils.c hpgUtils.h
- The Win32 "Command Prompt" does not recognize ANSI.SYS escape sequences at
all.
- the .ZIP source code distribution now includes the examples
- more efficient .ZIP archiving in .zipdist.sh

*Fri Nov 26 2010 Henri Gavin <.> 0.20100105
- updated user-manual.html with Gnuplot links to www.gnuplot.info
and removed links to http://www.duke.edu/~hpgavin/gnuplot.html

*Wed Nov 10 2010 Henri Gavin <.> 0.20100105
- improve comments and documentation on the '-e' command line flag

*Tue Nov  9 2010 Henri Gavin <.> 0.20100105
- added program name, description, url and author to LICENSE.txt

*Sat Oct 10 2010 Henri Gavin <.> 0.20100105
- fix typo re: local section axes in section 7.6 of manual
- set value of steel density in exA.3dd, exC.3dd, exD.3dd, and exG.3dd to 7.33e-7 k/in^3/g

*Tue Sep  7 2010 Henri Gavin <.> 0.20100105
- bug fix in call to lumped_M (switched beam mass BMs and roll angle p) 

*Wed Aug 12 2010 Henri Gavin <.> 0.20100105
- add wxWidgets link to TODO.txt

*Tue Aug 10 2010 Henri Gavin <.> 0.20100105
- add extra beam mass to element mass matrix prior to coordinate transformation
- better checking of symmetry of consistent mass matrix
- better checking of symmetry of geometric stiffness matrix
- debug option writes all element mass and stiffness matrices to disk

*Mon Aug 09 2010 Henri Gavin <.> 0.20100105
- add plot formatting ... 'set size ratio -1'  for equal XY plot scaling
- improve and simplify plot axis scaling for 3D animations
- add "-z" command line option to force 3D plotting
"-z" forces 3D plotting in Gnuplot
- update documentation regarding -z flag